--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,76 +1,64 @@
-# General Application Settings
-
-# API Configuration
 api:
-  openai:
-    api_key: "${OPENAI_API_KEY}" # Set in environment variables
-    model: "gpt-4"
-    temperature: 0.1
-    max_tokens: 2000
-
-  # Alternative LLM providers (optional)
-  anthropic:
-    api_key: "${ANTHROPIC_API_KEY}"
-    model: "claude-3-sonnet-20240229"
-
-  # Financial data APIs
   alpha_vantage:
-    api_key: "${ALPHA_VANTAGE_API_KEY}"
-
+    api_key: ${ALPHA_VANTAGE_API_KEY}
+  anthropic:
+    api_key: ${ANTHROPIC_API_KEY}
+    model: claude-3-sonnet-20240229
   financial_modeling_prep:
-    api_key: "${FMP_API_KEY}"
-
-# Vector Database Configuration
-vector_db:
-  provider: "qdrant" # qdrant, weaviate, chroma
-
-  qdrant:
-    host: "localhost"
-    port: 6333
-    collection_name: "niveshak_knowledge"
-    vector_size: 1536 # OpenAI embedding dimension
-
-  weaviate:
-    url: "http://localhost:8080"
-    class_name: "NiveshakDocument"
-
-# Embedding Configuration
-embedding:
-  provider: "openai" # openai, sentence_transformers
-  model: "text-embedding-ada-002"
-  batch_size: 100
-  chunk_size: 1000
-  chunk_overlap: 200
-
-# Data Storage Paths
-storage:
-  books_dir: "data/books"
-  reports_dir: "data/reports"
-  embeddings_dir: "data/embeddings"
-  cache_dir: ".cache"
-
-# Logging Configuration
-logging:
-  level: "INFO" # DEBUG, INFO, WARNING, ERROR
-  file: "logs/niveshak.log"
-  max_file_size: "10MB"
-  backup_count: 5
-
-# Application Settings
+    api_key: ${FMP_API_KEY}
+  ollama:
+    base_url: http://localhost:11434
+    max_tokens: 200
+    model: deepseek-r1:7b
+    temperature: 0.1
+  openai:
+    api_key: ${OPENAI_API_KEY}
+    max_tokens: 2000
+    model: gpt-3.5-turbo
+    temperature: 0.1
 app:
-  name: "NiveshakAI"
-  version: "0.1.0"
-  environment: "development" # development, production
-
-# Data Processing Settings
-processing:
-  max_file_size_mb: 50 # Maximum file size for processing
-  supported_formats: ["pdf", "txt", "docx"]
-  parallel_processing: true
-  max_workers: 4
-
-# Cache Settings
+  environment: development
+  name: NiveshakAI
+  version: 0.1.0
 cache:
   enabled: true
-  ttl_hours: 24 # Time to live for cached results
-  max_size_mb: 1000 # Maximum cache size
+  max_size_mb: 1000
+  ttl_hours: 24
+embedding:
+  base_url: http://localhost:11434
+  batch_size: 100
+  chunk_overlap: 200
+  chunk_size: 1000
+  model: nomic-embed-text
+  provider: ollama
+llm:
+  fallback_provider: openai
+  provider: ollama
+logging:
+  backup_count: 5
+  file: logs/niveshak.log
+  level: INFO
+  max_file_size: 10MB
+processing:
+  max_file_size_mb: 50
+  max_workers: 4
+  parallel_processing: true
+  supported_formats:
+    - pdf
+    - txt
+    - docx
+storage:
+  books_dir: data/books
+  cache_dir: .cache
+  embeddings_dir: data/embeddings
+  reports_dir: data/reports
+vector_db:
+  provider: qdrant
+  qdrant:
+    collection_name: niveshak_knowledge
+    host: localhost
+    port: 6333
+    vector_size: 768
+  weaviate:
+    class_name: NiveshakDocument
+    url: http://localhost:8080
