feat: implement multi-vendor LLM PDF analyzer and complete symbol-based stock analysis
Major Features:
- Multi-vendor LLM PDF analyzer (OpenAI, Anthropic, Ollama)
- Vendor-agnostic LLMPDFAnalyzer with configurable providers
- Complete SymbolStockAnalyzer with DCF valuation
- Enhanced configuration system via settings.yaml
- Working ITC analysis with current price integration

Technical Changes:
- Add src/analysis/llm_pdf_analyzer.py - Multi-vendor LLM PDF extraction
- Add src/analysis/symbol_stock_analyzer.py - Complete stock analysis engine
- Add fresh_itc_analysis.py - Working ITC analysis script
- Update config/settings.yaml - LLM provider configuration
- Update .gitignore - Ignore reports directory and generated files
- Update requirements.txt - Add necessary dependencies

Test Coverage:
- Add test_llm.py - LLM integration testing
- Remove duplicate/outdated test files
- Successful end-to-end ITC analysis at ₹491.11

Analysis Results:
- ITC intrinsic value: ₹177.94 vs current ₹491.11 (OVERVALUED)
- Multi-year financial data extraction working
- DCF valuation with margin of safety implemented
- Professional report generation in reports/ directory

Clean-up:
- Remove duplicate analyzer files
- Remove outdated demo files
- Standardize file structure and naming
- Configure proper git ignores for generated content

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,10 @@ niveshak_summary.csv
 analysis_results.json
 *.analysis.json
 
+# Generated reports directory
+reports/
+reports/*
+
 # Logs
 *.log
 logs/
