--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -14,7 +14,7 @@ api:
   openai:
     api_key: ${OPENAI_API_KEY}
     max_tokens: 2000
-    model: gpt-4o
+    model: gpt-4.1-nano
     temperature: 0.1
 app:
   environment: development
@@ -37,7 +37,7 @@ llm:
   # PDF Analysis LLM Configuration
   pdf_analysis:
     provider: openai # Default to OpenAI for PDF analysis (openai, anthropic, ollama)
-    model: gpt-4o # Will use the model from the selected provider's config
+    model: gpt-4.1-nano # Will use the model from the selected provider's config
     temperature: 0.1 # Lower temperature for more consistent extraction
 logging:
   backup_count: 5
