--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ langchain-community>=0.1.0
 qdrant-client>=1.7.0
 weaviate-client>=3.25.0
 
+# Web framework
+flask>=3.0.0
+werkzeug>=3.0.0
+
 # PDF processing
 PyPDF2>=3.0.0
 pdfplumber>=0.9.0
@@ -43,3 +47,5 @@ loguru>=0.7.0
 
 # PDF report generation
 fpdf
+markdown2>=2.4.0
+weasyprint>=60.0
